# geom-ui

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  meson.build
examples/: CMakeLists.txt  basic.cpp  gui.cpp
include/: geomui.hpp
include/geomui/: component.hpp  construction.hpp  solver.hpp  ui.hpp
src/: constraint-parser.cpp  construction.cpp  solver.cpp  test.cpp  ui.cpp
src/solver/: constraint-parser.cpp  solver.cpp
